Set Behat params

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,7 @@ behat_tests: &behat_tests
         command: |
           cd /var/www/html && export PATH=/var/www/html/vendor/bin:$PATH
           composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1  drupal/drupal-extension:^3.4 guzzlehttp/guzzle:^6.0@dev
-          export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://$CIRCLE_BRANCH-portlandor.pantheonsite.io\"}}}"
+          echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://$CIRCLE_BRANCH-portlandor.pantheonsite.io\"}}}"' >> $SET_BEHAT_PARAMS && source $SET_BEHAT_PARAMS
           behat -c tests/behat.yml
     - save_cache: *save_cache
     - store_test_results:
