--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -11,7 +11,7 @@ default:
       goutte: ~
       selenium2: ~
       # Can be overriden by BEHAT_PARAMS
-      base_url: http://localhost
+      # base_url: http://localhost
       sessions:
         default:
           goutte: ~
