--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -10,7 +10,7 @@ default:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
-      # Can be overriden by BEHAT_PARAMS
+      # Must comment this out so it can be overriden by BEHAT_PARAMS
       # base_url: http://localhost
       sessions:
         default:
