sleep before CR

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,9 +78,7 @@ behat_tests: &behat_tests
             # Sanitize DB
             # terminus drush portlandor.dev -- sql-sanitize -y
             # Clear cache
-            terminus remote:drush portlandor.dev -- cr
-            # Import config files
-            terminus remote:drush portlandor.dev -- cim -y   
+            terminus remote:drush portlandor.dev -- cr && terminus remote:drush portlandor.dev -- cim -y   
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
@@ -122,8 +120,7 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             # sleep 40s 
             # Clear cache. Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            sleep 20s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            sleep 20s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
           fi
     - run:
         name: Run tests against Pantheon
