POWR-165 switch admin theme to seven and update homepage views with cards approach.

--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -161,7 +161,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-          default: title
+          default: changed
           empty_table: true
       row:
         type: fields
@@ -219,7 +219,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          batch: true
+          batch: false
           batch_size: 10
           form_step: true
           buttons: true
@@ -243,11 +243,11 @@ display:
             'entity:delete_action:node': 'entity:delete_action:node'
           preconfiguration:
             'entity:unpublish_action:node':
-              label_override: 'Unpublish selected items'
+              label_override: 'Unpublish selected'
             'entity:publish_action:node':
-              label_override: 'Publish selected items'
+              label_override: 'Publish selected'
             'entity:delete_action:node':
-              label_override: 'Delete selected items'
+              label_override: 'Delete selected'
           plugin_id: views_bulk_operations_bulk_form
         nid:
           id: nid
