--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -56,13 +56,11 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 4
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: false
-          col_class_custom: 'card align-items-center justify-content-center flex-fill'
-          row_class_default: false
-          row_class_custom: 'card-group text-center align-middle d-flex'
+          row_class: 'nav-item text-sm-center card'
+          default_row_class: false
+          type: ul
+          wrapper_class: w-100
+          class: 'nav card-group'
       row:
         type: fields
         options:
