POWR-165 switch admin theme to seven and update homepage views with cards approach.

--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -56,11 +56,11 @@ display:
         type: html_list
         options:
           grouping: {  }
-          row_class: 'nav-item flex-sm-fill text-sm-center '
+          row_class: 'nav-item text-sm-center card'
           default_row_class: false
           type: ul
           wrapper_class: w-100
-          class: 'nav nav-justified flex-column flex-sm-row'
+          class: 'nav card-group'
       row:
         type: fields
         options:
