--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -53,14 +53,16 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: html_list
+        type: grid
         options:
           grouping: {  }
-          row_class: 'nav-item flex-sm-fill text-sm-center '
-          default_row_class: true
-          type: ul
-          wrapper_class: 'w-100 mt-3'
-          class: 'nav nav-justified flex-column flex-sm-row'
+          columns: 4
+          automatic_width: false
+          alignment: horizontal
+          col_class_default: false
+          col_class_custom: 'nav-item text-sm-center card'
+          row_class_default: true
+          row_class_custom: 'nav card-group'
       row:
         type: fields
         options:
@@ -133,7 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-secondary topic">{{ name }}</a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link h-100 align-middle p-3 border border-dark bg-info topic">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
