--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -64,6 +64,7 @@ module:
   lightning_search: 0
   lightning_workflow: 0
   link: 0
+  masquerade: 0
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
