--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -65,6 +65,7 @@ module:
   lightning_workflow: 0
   link: 0
   link_class: 0
+  masquerade: 0
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
