POWR-165 fixed a height issues on tablet sizes for homepage navigation.

--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -135,7 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link h-100 align-middle p-3 border border-dark bg-info topic">{{ name }}</a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-info topic h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
