--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -133,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-primary audience">{{ name }}</a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-primary audience h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
