--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -133,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-primary community-action">{{ name }}</a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-primary community-action h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
