--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -135,11 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-<<<<<<< HEAD
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-3 m-0"><h3>{{ name }}</h3></a>'
-=======
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link h-100 align-middle p-3 border border-dark bg-info topic">{{ name }}</a>'
->>>>>>> POWR-165 switch admin theme to seven and update homepage views with cards approach.
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-info topic h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
