--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -56,21 +56,11 @@ display:
         type: grid
         options:
           grouping: {  }
-<<<<<<< HEAD
-          columns: 4
-          automatic_width: false
-          alignment: horizontal
-          col_class_default: false
-          col_class_custom: 'card align-items-center d-flex justify-content-center'
-          row_class_default: false
-          row_class_custom: 'card-group text-center align-middle'
-=======
           row_class: 'nav-item text-sm-center card'
           default_row_class: false
           type: ul
           wrapper_class: 'w-100 mt-3'
           class: 'nav card-group'
->>>>>>> POWR-165 switch admin theme to seven and update homepage views with cards approach.
       row:
         type: fields
         options:
@@ -143,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-4 m-0"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-primary community-action h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
