Test with delay of 30s

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ behat_tests: &behat_tests
             # sleep 40s
             # Clear cache. Import config files
             # sleep 30s
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr 
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && sleep 30s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr 
           fi
     - run:
         name: Run tests against Pantheon
