--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,8 +120,7 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             # sleep 40s
             # Clear cache. Import config files
-            sleep 30s
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && sleep 30s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
           fi
     - run:
         name: Run tests against Pantheon
