--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,12 +73,11 @@ behat_tests: &behat_tests
             terminus env:wake portlandor.dev
             # Check site status
             # terminus drush portlandor.dev -- status
-            sleep 30s
             # TODO: pull DB from Live
             # Sanitize DB
             # terminus drush portlandor.dev -- sql-sanitize -y
             # Clear cache
-            terminus remote:drush portlandor.dev -- cr && terminus remote:drush portlandor.dev -- cim -y   
+            terminus remote:drush portlandor.dev -- cr && sleep 30s && terminus remote:drush portlandor.dev -- cim -y   
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
