POWR-165 Group administrative views and links (#58)
* POWR-170 updated configs to get xdebug working.

* POWR-170 added xdebug setup preliminary readme

* POWR-165 change Nodes tab to Content in view config

* POWR-165 remove Group operations block

* POWR-165 moved local actions menu (ie Relate or Create node in group Content tab) below title

* POWR-165 initial commit of new pdx module for modifying Group landing page tabs, among other things. still trying to figure out how d8 module routing works.

* POWR-165 added some notes

* POWR-165 Initial commit of config changes: remove group operations menu, reorder local actions and task buttons, change name of Nodes tab to Content.

* POWR-165 Initial commit of custom module for layout improvements on Group landing page

* POWR-165 enabled custom portland module

* POWR-165 enabled the Group module content plugins for service location and building content types, so that the content type choices appear when adding content

* POWR-165 Hide local actions from Group content page (/group/*/nodes); we don't want the Relate node or Create node links visible there, but do want Add member to still appear in Members tab. Misc code cleanup.

* POWR-165 - Updated Group view "Group nodes" to override and match previously created custom "Group content" view. Removed obsolete Group Content view.

* POWR-170 updated configs to get xdebug working.

* POWR-170 added xdebug setup preliminary readme

* POWR-165 change Nodes tab to Content in view config

* POWR-165 remove Group operations block

* POWR-165 moved local actions menu (ie Relate or Create node in group Content tab) below title

* POWR-165 initial commit of new pdx module for modifying Group landing page tabs, among other things. still trying to figure out how d8 module routing works.

* POWR-165 added some notes

* POWR-165 Initial commit of config changes: remove group operations menu, reorder local actions and task buttons, change nam

--- a/.lando.yml
+++ b/.lando.yml
@@ -6,6 +6,11 @@ config:
   id: 5c6715db-abac-4633-ada8-1c9efe354629
 framework: drupal8
 xdebug: true
+services:
+  appserver:
+    xdebug: true
+    config:
+      conf: xdebug.ini
 drush: composer
 tooling:
   drush:
