--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -65,6 +65,7 @@ module:
   lightning_workflow: 0
   link: 0
   link_class: 0
+  masquerade: 0
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
@@ -82,6 +83,7 @@ module:
   panels: 0
   panels_ipe: 0
   path: 0
+  portland: 0
   quickedit: 0
   rdf: 0
   redirect: 0
@@ -122,7 +124,6 @@ theme:
   adminimal_theme: 0
   bootstrap_barrio: 0
   stormy: 0
-  bootstrap: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
