--- a/web/sites/default/config/views.view.bureaus_offices_list.yml
+++ b/web/sites/default/config/views.view.bureaus_offices_list.yml
@@ -47,12 +47,17 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
           items_per_page: 50
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -61,9 +66,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
+          quantity: 9
       style:
         type: html_list
         options:
@@ -167,7 +170,17 @@ display:
           entity_field: label
           plugin_id: standard
       title: 'Bureaus and offices'
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total bureaus and offices at the City of Portland, Oregon.'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
