--- a/web/sites/default/config/views.view.groups_by_topic.yml
+++ b/web/sites/default/config/views.view.groups_by_topic.yml
@@ -53,6 +53,13 @@ display:
           offset: 0
       style:
         type: html_list
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          type: ul
+          wrapper_class: list-item
+          class: ''
       row:
         type: fields
       fields:
