--- a/web/sites/default/config/views.view.services_by_term.yml
+++ b/web/sites/default/config/views.view.services_by_term.yml
@@ -58,9 +58,9 @@ display:
         options:
           grouping: {  }
           row_class: ''
-          default_row_class: true
+          default_row_class: false
           type: ul
-          wrapper_class: item-list
+          wrapper_class: list-item
           class: ''
       row:
         type: fields
