--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -10,6 +10,8 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'access contextual links'
   - 'access site-wide contact form'
   - 'access toolbar'
   - 'view media'
+  - 'view own unpublished content'
