--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -53,16 +53,14 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: grid
+        type: html_list
         options:
           grouping: {  }
-          columns: 4
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: false
-          col_class_custom: 'card align-items-center justify-content-center flex-fill'
-          row_class_default: false
-          row_class_custom: 'card-group text-center align-middle d-flex'
+          row_class: 'nav-item text-sm-center card'
+          default_row_class: false
+          type: ul
+          wrapper_class: w-100
+          class: 'nav card-group'
       row:
         type: fields
         options:
@@ -135,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-4 m-0"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-primary audience h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
