--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -56,13 +56,13 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 3
+          columns: 4
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'card align-items-center d-flex justify-content-center'
-          row_class_default: false
-          row_class_custom: 'card-group text-center'
+          col_class_custom: 'nav-item text-sm-center card'
+          row_class_default: true
+          row_class_custom: 'nav card-group'
       row:
         type: fields
         options:
@@ -135,7 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-3 m-0"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-info topic h-100 align-middle">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
@@ -274,6 +274,7 @@ display:
           plugin_id: standard
       arguments: {  }
       display_extenders: {  }
+      css_class: mt-3
     cache_metadata:
       max-age: -1
       contexts:
