POWR-194 Allow authenticated users to view admin theme

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,8 @@ behat_tests: &behat_tests
             # Sanitize DB
             # terminus drush portlandor.dev -- sql-sanitize -y
             # Clear cache
-            terminus remote:drush portlandor.dev -- cr && sleep 30s && terminus remote:drush portlandor.dev -- cim -y   
+            sleep 30s
+            terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
@@ -117,9 +118,9 @@ behat_tests: &behat_tests
             # Wake up the multidev site
             terminus env:wake portlandor.$CIRCLE_BRANCH
             # The following two drush commands will fail without wait for a few seconds
-            # sleep 40s
+            sleep 30s
             # Clear cache. Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && sleep 30s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
           fi
     - run:
         name: Run tests against Pantheon
