POWR-135 Enabled Maxlength in Drupal

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -66,6 +66,7 @@ module:
   link: 0
   link_class: 0
   masquerade: 0
+  maxlength: 0
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
