POWR-135 Added Maxlength to City Service title field

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - chosen_field
     - content_moderation
     - datetime
+    - maxlength
     - paragraphs
     - path
 id: node.city_service.default
@@ -101,7 +102,10 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 240
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
     weight: 5
