POWR-143 Pointing search filter at rendered item field of index

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -186,9 +186,10 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: phrase
+          parse_mode: terms
           min_length: null
-          fields: {  }
+          fields:
+            rendered_item: rendered_item
           plugin_id: search_api_fulltext
       sorts: {  }
       title: Services
