POWR-143 Removing placeholder text

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -173,7 +173,7 @@ display:
               layout_manager: '0'
               media_creator: '0'
               media_manager: '0'
-            placeholder: 'Search for a phrase...'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
