Test wait after wake

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@ behat_tests: &behat_tests
             git push -f pantheon $CIRCLE_BRANCH
             # Wake up the multidev site
             terminus env:wake portlandor.$CIRCLE_BRANCH
+            while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' https://$CIRCLE_BRANCH-portlandor.pantheonsite.io)" != "200" ]]; do sleep 5; done
             # The following two drush commands will fail without wait for a few seconds
             # sleep 40s
             # Clear cache. Import config files
