Fix syntax save_cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ behat_tests: &behat_tests
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
           fi
     - save_cache:
-        keys: terminus-{{ checksum "/tmp/composer.lock" }}
+        key: terminus-{{ checksum "/tmp/composer.lock" }}
         paths:
           - /tmp/vendor
     - run:
