POWR-178 Services should have a related services field

--- a/web/sites/default/config/block.block.stormy_views_block__services_related_taxonomy_block_1.yml
+++ b/web/sites/default/config/block.block.stormy_views_block__services_related_taxonomy_block_1.yml
@@ -1,6 +1,6 @@
 uuid: dda509d2-deff-418f-ada7-50d5577e3a11
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.services_related_taxonomy
