--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_related_services
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_topics
     - node.type.city_service
@@ -34,6 +35,14 @@ content:
   field_community_actions:
     weight: 1
     label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_related_services:
+    weight: 4
+    label: above
     settings:
       link: true
     third_party_settings: {  }
