POWR-142 - Configured pathauto patterns to enable for bureau/office and project types

--- a/web/sites/default/config/pathauto.pattern.group_title.yml
+++ b/web/sites/default/config/pathauto.pattern.group_title.yml
@@ -3,12 +3,22 @@ langcode: en
 status: true
 dependencies:
   module:
+    - ctools
     - group
 id: group_title
 label: 'Group title'
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
-selection_criteria: {  }
+selection_criteria:
+  19ceae56-d96c-4aec-84f8-f48c0e7261b5:
+    id: 'entity_bundle:group'
+    bundles:
+      bureau_office: bureau_office
+      program: program
+    negate: false
+    context_mapping:
+      group: group
+    uuid: 19ceae56-d96c-4aec-84f8-f48c0e7261b5
 selection_logic: and
 weight: -10
 relationships: {  }
