--- a/web/sites/default/config/field.field.group.program.field_shortname_or_acronym.yml
+++ b/web/sites/default/config/field.field.group.program.field_shortname_or_acronym.yml
@@ -10,7 +10,7 @@ field_name: field_shortname_or_acronym
 entity_type: group
 bundle: program
 label: 'Shortname or acronym'
-description: 'This is the commonly used shortname or acronym for the organization and is used to create URL path.'
+description: 'This is the commonly used shortname or acronym for the program and is used to create the URL path for the landing page and all child content. If this value is changed, the URL paths for all content in this program will be updated automatically.'
 required: true
 translatable: true
 default_value: {  }
