--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
+        "drupal-pattern-lab/bem-twig-extension": "^1.0",
+        "drupal-pattern-lab/unified-twig-extensions": "^0.1",
         "drupal/address": "^1.3",
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
@@ -38,6 +41,7 @@
         "drupal/chosen": "^2.5",
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
+        "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
         "drupal/ds": "^3.1",
         "drupal/eva": "^1.3",
@@ -61,10 +65,7 @@
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "^1.4",
-        "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
-        "drupal-pattern-lab/bem-twig-extension": "^1.0",
-        "drupal-pattern-lab/unified-twig-extensions": "^0.1"
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
         "behat/mink": "~1.7",
