--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -18,6 +18,7 @@ module:
   contact_storage: 0
   content_moderation: 0
   contextual: 0
+  copyright_block: 0
   crop: 0
   ctools: 0
   ctools_block: 0
