Hotfix-5 update lightning to see if it fixes worklfow errors.

--- a/web/sites/default/config/lightning_roles.settings.yml
+++ b/web/sites/default/config/lightning_roles.settings.yml
@@ -32,5 +32,7 @@ content_roles:
       - 'use editorial transition publish'
       - 'use editorial transition review'
       - 'use editorial transition archive'
+      - 'view any unpublished content'
+      - 'view latest version'
 _core:
   default_config_hash: s0DQ96S4Q7lvAlNnSv52u3vDsYFN1OSBlqyVP1fd9WA
