--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -678,11 +678,11 @@ display:
           exposed: true
           expose:
             operator_id: bundle_op
-            label: Source
+            label: Type
             description: ''
             use_operator: false
             operator: bundle_op
-            identifier: source
+            identifier: type
             required: false
             remember: false
             multiple: false
