POWR-145 Removed portland_fields references form the view I had created

--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - group
     - node
-    - portland_fields
+    - portland
 id: group_content_menu
 label: 'Group content menu'
 module: views
@@ -265,7 +265,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: portland_fields_plural_label
+          type: portland_plural_label
           settings: {  }
           group_column: target_id
           group_columns: {  }
