Hotfix-5 remove all workflow related configuration to try and clear up databse dependency.

--- a/web/sites/default/config/core.entity_form_display.media.instagram.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.instagram.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.media.instagram.field_media_in_library
     - media.type.instagram
   module:
-    - content_moderation
     - path
 _core:
   default_config_hash: 59ziPzJNPAqMrCE-SBvcUQxVXORfAJ_tkMlS4sIUAFQ
@@ -32,11 +31,13 @@ content:
     third_party_settings: {  }
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 0
