--- a/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.media_browser.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
-    - content_moderation
     - path
 _core:
   default_config_hash: Wft8ifOMAlgFjAvTyWmpKS_RnTcBkckjM2u90vzd7cM
@@ -25,11 +24,13 @@ content:
     third_party_settings: {  }
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 0
