--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -6,8 +6,6 @@ dependencies:
     - field.field.node.information.field_body
     - node.type.information
   module:
-    - content_moderation
-    - datetime
     - paragraphs
     - path
 id: node.information.default
@@ -34,11 +32,13 @@ content:
     third_party_settings: {  }
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 9
-    settings: {  }
-    region: content
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 7
