--- a/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
@@ -5,9 +5,6 @@ dependencies:
   config:
     - field.field.paragraph.location.field_service_location
     - paragraphs.paragraphs_type.location
-  module:
-    - content_moderation
-    - datetime
 id: paragraph.location.default
 targetEntityType: paragraph
 bundle: location
@@ -23,11 +20,13 @@ content:
     type: entity_reference_autocomplete
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 102
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   scheduled_publication:
     type: datetime_default
     weight: 20
