--- a/web/sites/default/config/core.entity_form_display.paragraph.simple_text.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.simple_text.default.yml
@@ -6,8 +6,6 @@ dependencies:
     - field.field.paragraph.simple_text.field_text
     - paragraphs.paragraphs_type.simple_text
   module:
-    - content_moderation
-    - datetime
     - text
 id: paragraph.simple_text.default
 targetEntityType: paragraph
@@ -23,11 +21,13 @@ content:
     type: text_textarea
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 102
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   scheduled_publication:
     type: datetime_default
     weight: 20
