--- a/web/sites/default/config/core.entity_form_display.block_content.basic.default.yml
+++ b/web/sites/default/config/core.entity_form_display.block_content.basic.default.yml
@@ -6,8 +6,6 @@ dependencies:
     - block_content.type.basic
     - field.field.block_content.basic.body
   module:
-    - content_moderation
-    - datetime
     - text
 _core:
   default_config_hash: S0f54eS7by2OoFl_NrvBK9UGTPx51cktxKhvwMy0Jls
@@ -34,11 +32,13 @@ content:
     third_party_settings: {  }
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   scheduled_publication:
     type: datetime_default
     weight: 20
