--- a/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
@@ -9,7 +9,6 @@ dependencies:
     - image.style.medium
     - media.type.image
   module:
-    - content_moderation
     - image_widget_crop
     - lightning_media
     - path
@@ -45,11 +44,13 @@ content:
         remove_button: false
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 3
