--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
-    - content_moderation
     - path
     - video_embed_field
 _core:
@@ -31,11 +30,13 @@ content:
     third_party_settings: {  }
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 0
