--- a/web/sites/default/config/core.entity_form_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.building.default.yml
@@ -7,8 +7,6 @@ dependencies:
     - node.type.building
   module:
     - address
-    - content_moderation
-    - datetime
     - path
 id: node.building.default
 targetEntityType: node
@@ -29,11 +27,13 @@ content:
     type: address_default
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 8
-    settings: {  }
-    region: content
+    weight: 51
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 7
@@ -84,4 +84,7 @@ content:
       placeholder: ''
     region: content
     third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
 hidden: {  }
