--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -10,8 +10,6 @@ dependencies:
     - node.type.city_service
   module:
     - chosen_field
-    - content_moderation
-    - datetime
     - paragraphs
     - path
 id: node.city_service.default
@@ -56,11 +54,13 @@ content:
     type: chosen_select
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 11
-    settings: {  }
-    region: content
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 10
