POWR-143 Adding title to the services index Thi is so the associated view can sort on it

--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -56,6 +56,11 @@ field_settings:
         - field.storage.node.field_audience
       module:
         - taxonomy
+  title:
+    label: Title
+    datasource_id: 'entity:node'
+    property_path: title
+    type: string
 datasource_settings:
   'entity:node':
     bundles:
