POWR-143 View modifications Added reset button to exposed search form Sorting view based on service title Adding headers

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -37,10 +37,10 @@ display:
         type: basic
         options:
           submit_button: Search
-          reset_button: false
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
+          expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
@@ -191,14 +191,50 @@ display:
           fields:
             rendered_item: rendered_item
           plugin_id: search_api_fulltext
-      sorts: {  }
+      sorts:
+        title:
+          id: title
+          table: search_api_index_services
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
       title: Services
-      header: {  }
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: '<p>Browse or search through the services provided by the city as well as frequently requested services provided by the county and regional organizations.</p>'
+            format: simple_editor
+          plugin_id: text
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total services'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -225,9 +261,15 @@ display:
         context: '0'
         menu_name: main
       cache:
-        type: none
+        type: search_api_time
+        options:
+          results_lifespan: 3600
+          results_lifespan_custom: 0
+          output_lifespan: 3600
+          output_lifespan_custom: 0
       defaults:
         cache: false
+      exposed_block: false
     cache_metadata:
       max-age: -1
       contexts:
