POWR-129 Update info

--- a/web/sites/default/config/block.block.policiesanddisclaimers.yml
+++ b/web/sites/default/config/block.block.policiesanddisclaimers.yml
@@ -20,6 +20,6 @@ settings:
   provider: block_content
   label_display: '0'
   status: true
-  info: ''
+  info: 'This block contains policies and disclaimers.'
   view_mode: full
 visibility: {  }
